<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormulairePlanifActivity">

    <TextView
        android:id="@+id/TvFormMinute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="477dp" />

    <TextView
        android:id="@+id/TvTitreForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/planifCreation"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TvPlanifTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/titrePlanif"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TvTitreForm" />

    <EditText
        android:id="@+id/EtTitre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/TvPlanifTitre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TvPlanifTitre"
        app:layout_constraintTop_toTopOf="@+id/TvPlanifTitre" />

    <TextView
        android:id="@+id/EtCommande"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/commandePlanif"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/TvTime"
        app:layout_constraintTop_toBottomOf="@+id/BTime" />

    <Button
        android:id="@+id/BCommande"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commandeBouton"
        app:layout_constraintBottom_toBottomOf="@+id/EtCommande"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/EtCommande"
        app:layout_constraintTop_toTopOf="@+id/EtCommande" />

    <Button
        android:id="@+id/BSauvegarde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/sauvegarder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Heure sélectionnée : --:--"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/TvPlanifTitre"
        app:layout_constraintTop_toBottomOf="@+id/EtTitre" />

    <Button
        android:id="@+id/BTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Sélectionner l'heure"
        app:layout_constraintEnd_toEndOf="@+id/EtTitre"
        app:layout_constraintStart_toStartOf="@+id/TvTime"
        app:layout_constraintTop_toBottomOf="@+id/TvTime" />

    <TextView
        android:id="@+id/TvFormHeure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="413dp" />

    <TextView
        android:id="@+id/TvFormCommand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="531dp" />

</androidx.constraintlayout.widget.ConstraintLayout>